--- a/src/app/karigar/karigar-detail/karigar-detail.component.html
+++ b/src/app/karigar/karigar-detail/karigar-detail.component.html
@@ -13,7 +13,7 @@
                     <div class="full-offer">
                         <div class="top-heading no-justify">
                             <a class="back-btn" (click)="goBack()"><i class="material-icons">arrow_back</i></a>
-                            <h2>PLUMBER DETAIL</h2>
+                            <h2>{{userType}} DETAIL</h2>
                             <!-- <div class="btn-align">
                                 <button class="back-btn" (click)="openBonusPoint()">BONUS POINTS</button>
                             </div> -->
@@ -255,6 +255,50 @@
                                             <span>{{getData.document_no ? getData.document_no : 'N/A'}}</span>
                                         </li>
                                     </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s6">
+                <div class="sprate-box gift-offer">
+                    <div class="full-offer">
+                        <div class="top-heading">
+                            <h2>BANK DETAIL</h2>
+                        </div>
+                        <div class="detail-info pl0 pr0">
+                            <div class="basic-details">
+                                <div class="profile-info">
+                                    <ul>
+                                        <li>
+                                            <p>Account Holder Name</p>
+                                            <span>{{getData.account_holder_name!='' ? getData.account_holder_name :
+                                                'N/A'}}</span>
+                                        </li>
+                                        <li>
+                                            <p>Bank Name</p>
+                                            <span>{{getData.bank_name!='' ? getData.bank_name : 'N/A'}}</span>
+                                        </li>
+                                    </ul>
+
+                                        <ul>
+                                            <li>
+                                                <p>Account Number</p>
+                                                <span>{{getData.account_no ? getData.account_no : 'N/A'}}</span>
+                                            </li>
+
+                                            <li>
+                                                <p>IFSC Code</p>
+                                                <span>{{getData.ifsc_code ? getData.ifsc_code : 'N/A'}}</span>
+                                            </li>
+                                            <li>
+                                                <p>UPI ID</p>
+                                                <span>{{getData.upi_id ? getData.upi_id : 'N/A'}}</span>
+                                            </li>
+                                        </ul>
+                                     
                                 </div>
                             </div>
                         </div>
