--- a/src/app/offer/add-offer/add-offer.component.html
+++ b/src/app/offer/add-offer/add-offer.component.html
@@ -20,8 +20,10 @@
                                                         <mat-label>Select User Type</mat-label>
                                                         <mat-select  [(ngModel)]="addOffer.user_type" name="user_type" #user_type="ngModel" required>
                                                             <mat-option value=""></mat-option>
-                                                            <mat-option value="Plumber">Plumber</mat-option>
-                                                            <mat-option value="Retailer">Retailer</mat-option>
+                                                            <mat-option value="Carpenter">Carpenter</mat-option>
+                                                            <mat-option value="Masons">Masons</mat-option>
+                                                            <mat-option value="Fabricator">Fabricator</mat-option>
+                                                            <mat-option value="Architect">Architect</mat-option>
                                                         </mat-select>
                                                     </mat-form-field>  
                                                 </div>
