--- a/src/app/offer/offer-detail/offer-detail.component.html
+++ b/src/app/offer/offer-detail/offer-detail.component.html
@@ -25,7 +25,7 @@
                                             <div class="col s6 ">
                                                 <div class="detail-field">
                                                     <p>User Type</p>
-                                                    <span>{{getData.user_type == 'Retailer' ? 'Retailer':'Plumber'  }}</span>
+                                                    <span>{{getData.user_type}}</span>
                                                 </div>
                                             </div>
                                             
